Fixed bug: highscore link covered by logo's margin on iphone

--- a/app/client/index.less
+++ b/app/client/index.less
@@ -1,4 +1,6 @@
-/* LESS CSS Deklarations */
+/* app/client/index.less */
+
+@banner-margin: 15px;
 
 body {
   background-image: url('/images/grass.png');
@@ -11,7 +13,7 @@ body {
 .container {
   margin: 0 auto;
   max-width: 800px;
-  margin-top: 35px;
+  margin-top: 60px;
 
   .row {
     margin-top: 20px;
@@ -19,14 +21,17 @@ body {
 }
 
 #logo {
+  position: absolute;
+  left: @banner-margin;
+  top: @banner-margin;
+
   width: 100px;
-  padding: 15px 15px;
 }
 
 #highscores {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: @banner-margin;
+  right: @banner-margin;
 }
 
 audio.asset, .assets {
